--- a/generalized_assignment_prob.ipynb
+++ b/generalized_assignment_prob.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "40ea6f84",
    "metadata": {},
    "outputs": [],
@@ -55,27 +55,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "id": "f8ff7982",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "can only concatenate tuple (not \"str\") to tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_18428/1955697831.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[0mprob\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mlpSum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mn\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mres\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mn\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[0mcap\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m \u001b[0msolver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mactualSolve\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprob\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m \u001b[1;31m# solver.solverModel.parameters.timelimit.set(10)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;31m# solver.solverModel.parameters.preprocessing.presolve.set(0)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\progmat\\lib\\site-packages\\pulp\\apis\\cplex_api.py\u001b[0m in \u001b[0;36mactualSolve\u001b[1;34m(self, lp)\u001b[0m\n\u001b[0;32m    122\u001b[0m         \u001b[0moptions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptions\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetOptions\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    123\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0moption\u001b[0m \u001b[1;32min\u001b[0m \u001b[0moptions\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 124\u001b[1;33m             \u001b[0mcplex_cmds\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0moption\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"\\n\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    125\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misMIP\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    126\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmip\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: can only concatenate tuple (not \"str\") to tuple"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Version identifier: 20.1.0.0 | 2020-11-10 | 9bedb6d68\n",
+      "CPXPARAM_Read_DataCheck                          1\n",
+      "Tried aggregator 1 time.\n",
+      "Reduced MIP has 1620 rows, 32000 columns, and 64000 nonzeros.\n",
+      "Reduced MIP has 0 binaries, 0 generals, 0 SOSs, and 0 indicators.\n",
+      "Presolve time = 0.03 sec. (17.85 ticks)\n",
+      "Tried aggregator 1 time.\n",
+      "Detecting symmetries...\n",
+      "Reduced MIP has 1620 rows, 32000 columns, and 64000 nonzeros.\n",
+      "Reduced MIP has 0 binaries, 0 generals, 0 SOSs, and 0 indicators.\n",
+      "Presolve time = 0.05 sec. (25.10 ticks)\n",
+      "MIP emphasis: balance optimality and feasibility.\n",
+      "MIP search method: dynamic search.\n",
+      "Parallel mode: deterministic, using up to 12 threads.\n",
+      "Root relaxation solution time = 0.38 sec. (205.09 ticks)\n",
+      "\n",
+      "        Nodes                                         Cuts/\n",
+      "   Node  Left     Objective  IInf  Best Integer    Best Bound    ItCnt     Gap\n",
+      "\n",
+      "*     0     0      integral     0   -97821.3500   -97821.3500       18    0.00%\n",
+      "Elapsed time = 0.51 sec. (269.86 ticks, tree = 0.00 MB, solutions = 1)\n",
+      "\n",
+      "Root node processing (before b&c):\n",
+      "  Real time             =    0.51 sec. (271.18 ticks)\n",
+      "Parallel b&c, 12 threads:\n",
+      "  Real time             =    0.00 sec. (0.00 ticks)\n",
+      "  Sync time (average)   =    0.00 sec.\n",
+      "  Wait time (average)   =    0.00 sec.\n",
+      "                          ------------\n",
+      "Total (root+branch&cut) =    0.51 sec. (271.18 ticks)\n",
+      "Cplex status= 101\n",
+      "Version identifier: 20.1.0.0 | 2020-11-10 | 9bedb6d68\n",
+      "CPXPARAM_Preprocessing_Presolve                  0\n",
+      "CPXPARAM_Read_DataCheck                          1\n",
+      "CPXPARAM_MIP_Strategy_Branch                     1\n",
+      "CPXPARAM_TimeLimit                               10\n",
+      "\n",
+      "Root node processing (before b&c):\n",
+      "  Real time             =    0.00 sec. (0.37 ticks)\n",
+      "Parallel b&c, 12 threads:\n",
+      "  Real time             =    0.00 sec. (0.00 ticks)\n",
+      "  Sync time (average)   =    0.00 sec.\n",
+      "  Wait time (average)   =    0.00 sec.\n",
+      "                          ------------\n",
+      "Total (root+branch&cut) =    0.00 sec. (0.37 ticks)\n",
+      "Cplex status= 101\n"
      ]
     }
    ],
    "source": [
     "ans = []\n",
     "\n",
-    "solver = CPLEX_CMD(options = [(\"TimeLimit\",180),(\"Presolve\",0),(\"Cuts\",0),(\"BranchDir\", -1)])\n",
+    "solver = CPLEX_PY()\n",
     "\n",
     "prob = LpProblem(\"desig_gen_problem\", LpMaximize)\n",
     "\n",
@@ -101,34 +141,18 @@
     "solver.solverModel.parameters.timelimit.set(10)\n",
     "solver.solverModel.parameters.preprocessing.presolve.set(0)\n",
     "solver.solverModel.parameters.mip.strategy.branch.set(1)\n",
-    "print(solver.solverModel.parameters.get_all())\n",
+    "# print(solver.solverModel.parameters.get_all())\n",
     "\n",
-    "# solver.callSolver(prob)\n",
-    "status = solver.findSolutionValues(prob)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# # df_res = pd.DataFrame(res)\n",
-    "# # df_res.to_csv('results_lp.csv')"
+    "solver.callSolver(prob)\n",
+    "status = solver.findSolutionValues(prob)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "5d99e200",
+   "execution_count": null,
+   "id": "7ec6d355",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pulp.apis.cplex_api.CPLEX_CMD at 0x1c8f0158a30>"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
