tests with gurobiby; successfully got attributes from model

--- a/generalized_assignment_prob.ipynb
+++ b/generalized_assignment_prob.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "4d112cb5",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,7 @@
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import gurobipy as grb\n",
     "\n",
     "def read_matrix(path_file):\n",
     "    satisfactions = []\n",
@@ -45,77 +46,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "40ea6f84",
+   "execution_count": 11,
+   "id": "cf7739a6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputPath = \"./input/d201600.in\""
+    "# References: \n",
+    "# How to keep log files: https://coin-or.github.io/pulp/guides/how_to_configure_solvers.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
+   "id": "40ea6f84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputPath = \"./input/e801600.in\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "id": "f8ff7982",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Version identifier: 20.1.0.0 | 2020-11-10 | 9bedb6d68\n",
-      "CPXPARAM_Read_DataCheck                          1\n",
-      "Tried aggregator 1 time.\n",
-      "Reduced MIP has 1620 rows, 32000 columns, and 64000 nonzeros.\n",
-      "Reduced MIP has 0 binaries, 0 generals, 0 SOSs, and 0 indicators.\n",
-      "Presolve time = 0.03 sec. (17.85 ticks)\n",
-      "Tried aggregator 1 time.\n",
-      "Detecting symmetries...\n",
-      "Reduced MIP has 1620 rows, 32000 columns, and 64000 nonzeros.\n",
-      "Reduced MIP has 0 binaries, 0 generals, 0 SOSs, and 0 indicators.\n",
-      "Presolve time = 0.05 sec. (25.10 ticks)\n",
-      "MIP emphasis: balance optimality and feasibility.\n",
-      "MIP search method: dynamic search.\n",
-      "Parallel mode: deterministic, using up to 12 threads.\n",
-      "Root relaxation solution time = 0.38 sec. (205.09 ticks)\n",
-      "\n",
-      "        Nodes                                         Cuts/\n",
-      "   Node  Left     Objective  IInf  Best Integer    Best Bound    ItCnt     Gap\n",
-      "\n",
-      "*     0     0      integral     0   -97821.3500   -97821.3500       18    0.00%\n",
-      "Elapsed time = 0.51 sec. (269.86 ticks, tree = 0.00 MB, solutions = 1)\n",
-      "\n",
-      "Root node processing (before b&c):\n",
-      "  Real time             =    0.51 sec. (271.18 ticks)\n",
-      "Parallel b&c, 12 threads:\n",
-      "  Real time             =    0.00 sec. (0.00 ticks)\n",
-      "  Sync time (average)   =    0.00 sec.\n",
-      "  Wait time (average)   =    0.00 sec.\n",
-      "                          ------------\n",
-      "Total (root+branch&cut) =    0.51 sec. (271.18 ticks)\n",
-      "Cplex status= 101\n",
-      "Version identifier: 20.1.0.0 | 2020-11-10 | 9bedb6d68\n",
-      "CPXPARAM_Preprocessing_Presolve                  0\n",
-      "CPXPARAM_Read_DataCheck                          1\n",
-      "CPXPARAM_MIP_Strategy_Branch                     1\n",
-      "CPXPARAM_TimeLimit                               10\n",
-      "\n",
-      "Root node processing (before b&c):\n",
-      "  Real time             =    0.00 sec. (0.37 ticks)\n",
-      "Parallel b&c, 12 threads:\n",
-      "  Real time             =    0.00 sec. (0.00 ticks)\n",
-      "  Sync time (average)   =    0.00 sec.\n",
-      "  Wait time (average)   =    0.00 sec.\n",
-      "                          ------------\n",
-      "Total (root+branch&cut) =    0.00 sec. (0.37 ticks)\n",
-      "Cplex status= 101\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ans = []\n",
-    "\n",
-    "solver = CPLEX_PY()\n",
     "\n",
     "prob = LpProblem(\"desig_gen_problem\", LpMaximize)\n",
     "\n",
@@ -136,24 +93,143 @@
     "#   every worker has to take only the jobs that they can\n",
     "for i in range(m):\n",
     "    prob += lpSum([x[i*n + j] * res[i*n + j] for j in range(n)]) <= cap[i]\n",
-    "\n",
-    "solver.actualSolve(prob)\n",
-    "solver.solverModel.parameters.timelimit.set(10)\n",
-    "solver.solverModel.parameters.preprocessing.presolve.set(0)\n",
-    "solver.solverModel.parameters.mip.strategy.branch.set(1)\n",
-    "# print(solver.solverModel.parameters.get_all())\n",
-    "\n",
-    "solver.callSolver(prob)\n",
-    "status = solver.findSolutionValues(prob)"
+    "file = prob.writeMPS(\"test.mps\")\n",
+    "# result = prob.solve(solver)\n",
+    "# solver.Attr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7ec6d355",
+   "execution_count": 68,
+   "id": "502f9e59",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read MPS format model from file test.mps\n",
+      "Reading time = 0.53 seconds\n",
+      "desig_gen_problem: 1680 rows, 128000 columns, 256000 nonzeros\n",
+      "Set parameter TimeLimit to value 100\n",
+      "Set parameter Presolve to value 0\n",
+      "Set parameter Cuts to value 0\n",
+      "Set parameter BranchDir to value -1\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = grb.read(\"test.mps\")\n",
+    "model.setParam(\"TimeLimit\", 100.0)\n",
+    "model.setParam(\"Presolve\",0)\n",
+    "model.setParam(\"Cuts\",0)\n",
+    "model.setParam(\"BranchDir\",-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "53bb2120",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gurobi Optimizer version 9.5.0 build v9.5.0rc5 (win64)\n",
+      "Thread count: 6 physical cores, 12 logical processors, using up to 12 threads\n",
+      "Optimize a model with 1680 rows, 128000 columns and 256000 nonzeros\n",
+      "Model fingerprint: 0x7070c135\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 1e+02]\n",
+      "  Objective range  [1e+00, 1e+03]\n",
+      "  Bounds range     [1e+00, 1e+00]\n",
+      "  RHS range        [1e+00, 2e+02]\n",
+      "\n",
+      "Concurrent LP optimizer: primal simplex, dual simplex, and barrier\n",
+      "Showing barrier log only...\n",
+      "\n",
+      "Ordering time: 0.00s\n",
+      "\n",
+      "Barrier performed 0 iterations in 0.09 seconds (0.00 work units)\n",
+      "Barrier solve interrupted - model solved by another algorithm\n",
+      "\n",
+      "\n",
+      "Solved with dual simplex\n",
+      "Solved in 117 iterations and 0.11 seconds (0.00 work units)\n",
+      "Optimal objective -1.597168000e+06\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.optimize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "c0d5d64b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# numero de nos explorados\n",
+    "model.getAttr(\"NodeCount\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "be04eff4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1597168.0"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# valor da func objetivo\n",
+    "model.getAttr(\"ObjVal\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "655ce3e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1680,)"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# limitante dual\n",
+    "model.getAttr(\"Pi\") "
+   ]
   }
  ],
  "metadata": {
