--- a/generalized_assignment_prob.ipynb
+++ b/generalized_assignment_prob.ipynb
@@ -81,7 +81,7 @@
     "    configs += [(default, default, default, default, default, i, default) for i in strong_cg_cuts]\n",
     "    configs += [(default, default, default, default, default, default, i) for i in clique_cuts]\n",
     "\n",
-    "    configs = [(i, default, default, default, default, default, default) for i in presolves] + [(default, i, default, default, default, default, default) for i in varbranches]\n",
+    "    configs += [(i, default, default, default, default, default, default) for i in presolves] + [(default, i, default, default, default, default, default) for i in varbranches]\n",
     "    configs += [(default, default, i, default, default, default, default) for i in all_cuts] + [(default, default, default, i, default, default, default) for i in branchdirs]\n",
     "    configs += [(default, default, default, default, default, default, default)]\n",
     "    \n",
@@ -821,7 +821,180 @@
       " 17969 10888 -97822.583   45   98 -97857.000 -97822.047  0.04%  21.9  107s\n",
       " 18910 11252 -97832.759  231   42 -97857.000 -97822.047  0.04%  22.0  110s\n",
       " 20536 12825 -97855.563  487   40 -97857.000 -97822.050  0.04%  21.8  117s\n",
-      " 21261 13787 -97822.913   66   78 -97857.000 -97822.060  0.04%  22.0  120s\n"
+      " 21261 13787 -97822.913   66   78 -97857.000 -97822.060  0.04%  22.0  120s\n",
+      " 23306 15403 -97854.000  409   38 -97857.000 -97822.066  0.04%  22.0  128s\n",
+      " 23961 16232 -97822.581   44   74 -97857.000 -97822.066  0.04%  22.1  133s\n",
+      " 24790 17401 -97834.774  241   44 -97857.000 -97822.066  0.04%  22.1  136s\n",
+      " 26019 17402 -97836.754  278  100 -97857.000 -97822.066  0.04%  22.0  159s\n",
+      " 26021 17403 -97839.861  310   38 -97857.000 -97822.066  0.04%  22.0  161s\n",
+      " 26029 17409 -97851.930  415  124 -97857.000 -97822.066  0.04%  22.0  165s\n",
+      " 26034 17412 -97826.823  141  146 -97857.000 -97822.066  0.04%  22.0  170s\n",
+      " 26039 17415 -97836.075  264  158 -97857.000 -97822.066  0.04%  22.0  175s\n",
+      "\n",
+      "Cutting planes:\n",
+      "  Cover: 20\n",
+      "  MIR: 39\n",
+      "  StrongCG: 27\n",
+      "  Flow cover: 7\n",
+      "  Zero half: 2\n",
+      "  RLT: 5\n",
+      "\n",
+      "Explored 26043 nodes (583380 simplex iterations) in 180.01 seconds (255.64 work units)\n",
+      "Thread count was 12 (of 12 available processors)\n",
+      "\n",
+      "Solution count 10: -97857 -97864 -97866 ... -97938\n",
+      "\n",
+      "Time limit reached\n",
+      "Best objective -9.785700000000e+04, best bound -9.782206565743e+04, gap 0.0357%\n",
+      "Gurobi status= 9\n",
+      "Set parameter CliqueCuts to value 2\n",
+      "Gurobi Optimizer version 9.5.0 build v9.5.0rc5 (linux64)\n",
+      "Thread count: 6 physical cores, 12 logical processors, using up to 12 threads\n",
+      "Optimize a model with 1620 rows, 32000 columns and 64000 nonzeros\n",
+      "Model fingerprint: 0x439d68df\n",
+      "Variable types: 0 continuous, 32000 integer (0 binary)\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 1e+02]\n",
+      "  Objective range  [1e+00, 1e+02]\n",
+      "  Bounds range     [1e+00, 1e+00]\n",
+      "  RHS range        [1e+00, 3e+03]\n",
+      "Presolve time: 0.07s\n",
+      "Presolved: 1620 rows, 32000 columns, 64000 nonzeros\n",
+      "Variable types: 0 continuous, 32000 integer (32000 binary)\n",
+      "Found heuristic solution: objective -111777.0000\n",
+      "\n",
+      "Root relaxation: objective -9.782135e+04, 4280 iterations, 0.10 seconds (0.15 work units)\n",
+      "\n",
+      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
+      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
+      "\n",
+      "     0     0 -97821.350    0   38 -111777.00 -97821.350  12.5%     -    0s\n",
+      "H    0     0                    -97969.00000 -97821.350  0.15%     -    0s\n",
+      "H    0     0                    -97960.00000 -97821.350  0.14%     -    1s\n",
+      "H    0     0                    -97938.00000 -97821.350  0.12%     -    1s\n",
+      "H    0     0                    -97929.00000 -97821.365  0.11%     -    1s\n",
+      "     0     0 -97821.521    0   64 -97929.000 -97821.521  0.11%     -    1s\n",
+      "H    0     0                    -97915.00000 -97821.521  0.10%     -    2s\n",
+      "     0     0 -97821.751    0   62 -97915.000 -97821.751  0.10%     -    2s\n",
+      "     0     0 -97821.751    0   68 -97915.000 -97821.751  0.10%     -    2s\n",
+      "     0     0 -97821.751    0   74 -97915.000 -97821.751  0.10%     -    2s\n",
+      "     0     0 -97821.751    0  100 -97915.000 -97821.751  0.10%     -    2s\n",
+      "     0     0 -97821.751    0  100 -97915.000 -97821.751  0.10%     -    3s\n",
+      "     0     2 -97822.000    0  100 -97915.000 -97822.000  0.09%     -    4s\n",
+      "     7    14 -97822.000    3  112 -97915.000 -97822.000  0.09%  57.4    5s\n",
+      "H   33    38                    -97913.00000 -97822.000  0.09%  69.0    9s\n",
+      "H   35    38                    -97902.00000 -97822.000  0.08%  66.5    9s\n",
+      "    79   263 -97822.042   15   98 -97902.000 -97822.000  0.08%  44.9   10s\n",
+      "   512  1118 -97824.041   79   54 -97902.000 -97822.000  0.08%  23.2   15s\n",
+      "  1553  2027 -97839.350  269   38 -97902.000 -97822.000  0.08%  21.6   20s\n",
+      "  2474  3002 -97860.913  433   38 -97902.000 -97822.000  0.08%  23.3   26s\n",
+      "  3728  4702 -97886.350  614   37 -97902.000 -97822.000  0.08%  22.9   32s\n",
+      "  5504  6084 -97822.324   38   72 -97902.000 -97822.000  0.08%  21.9   36s\n",
+      "H 5533  5101                    -97878.00000 -97822.000  0.06%  21.9   36s\n",
+      "H 6202  4847                    -97877.00000 -97822.000  0.06%  22.4   38s\n",
+      "  6210  4852 -97858.166  426  140 -97877.000 -97822.000  0.06%  22.4   40s\n",
+      "  6216  4859 -97822.000   10  132 -97877.000 -97822.000  0.06%  23.2   45s\n",
+      "H 6246  4640                    -97866.00000 -97822.000  0.04%  23.4   53s\n",
+      "  6330  4886 -97822.203   31   94 -97866.000 -97822.000  0.04%  23.5   57s\n",
+      "  6526  5532 -97822.537   50   70 -97866.000 -97822.000  0.04%  23.5   62s\n",
+      "  7237  5823 -97829.808  175   40 -97866.000 -97822.000  0.04%  23.1   66s\n",
+      "  7765  6218 -97836.573  265   40 -97866.000 -97822.000  0.04%  22.7   70s\n",
+      "  9523  7563 -97822.915   57   64 -97866.000 -97822.020  0.04%  22.1   76s\n",
+      " 11416  8458 -97850.309  372   42 -97866.000 -97822.024  0.04%  21.7   81s\n",
+      " 12529  9394 -97823.839   96   46 -97866.000 -97822.024  0.04%  21.6   89s\n",
+      " 13512 10048 -97840.718  289   40 -97866.000 -97822.024  0.04%  21.5   92s\n",
+      " 14516 10302 -97860.986  463   38 -97866.000 -97822.034  0.04%  21.4   95s\n",
+      " 15878 11449 -97826.580  153   44 -97866.000 -97822.043  0.04%  21.6  101s\n",
+      " 17555 12240 -97855.460  404   39 -97866.000 -97822.045  0.04%  21.5  107s\n",
+      " 18375 12259 -97822.260   26  136 -97866.000 -97822.048  0.04%  21.6  110s\n",
+      " 19181 12521 -97829.280  192   42 -97866.000 -97822.048  0.04%  21.6  115s\n",
+      " 20351 13620 -97849.806  410   40 -97866.000 -97822.048  0.04%  21.6  122s\n",
+      " 20662 14208 -97856.986  467   40 -97866.000 -97822.050  0.04%  21.6  126s\n",
+      " 21357 15252 -97822.589   38   96 -97866.000 -97822.055  0.04%  21.7  130s\n",
+      " 23050 16608 -97844.176  327   36 -97866.000 -97822.055  0.04%  21.6  137s\n",
+      " 23809 17025 -97857.559  431   40 -97866.000 -97822.058  0.04%  21.7  141s\n",
+      " 24305 17969 -97823.370   64   62 -97866.000 -97822.058  0.04%  21.8  145s\n",
+      " 25299 17970 -97830.883  209  100 -97866.000 -97822.058  0.04%  21.8  170s\n",
+      " 25302 17972 -97823.672   84   48 -97866.000 -97822.058  0.04%  21.8  175s\n",
+      "\n",
+      "Cutting planes:\n",
+      "  Lift-and-project: 1\n",
+      "  Cover: 32\n",
+      "  MIR: 38\n",
+      "  StrongCG: 17\n",
+      "  Flow cover: 7\n",
+      "  RLT: 6\n",
+      "\n",
+      "Explored 25311 nodes (560444 simplex iterations) in 180.02 seconds (243.00 work units)\n",
+      "Thread count was 12 (of 12 available processors)\n",
+      "\n",
+      "Solution count 10: -97866 -97877 -97878 ... -97969\n",
+      "\n",
+      "Time limit reached\n",
+      "Best objective -9.786600000000e+04, best bound -9.782205774198e+04, gap 0.0449%\n",
+      "Gurobi status= 9\n",
+      "Set parameter GUBCoverCuts to value 0\n",
+      "Set parameter CliqueCuts to value -1\n",
+      "Gurobi Optimizer version 9.5.0 build v9.5.0rc5 (linux64)\n",
+      "Thread count: 6 physical cores, 12 logical processors, using up to 12 threads\n",
+      "Optimize a model with 1640 rows, 64000 columns and 128000 nonzeros\n",
+      "Model fingerprint: 0x417596d2\n",
+      "Variable types: 0 continuous, 64000 integer (0 binary)\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 1e+02]\n",
+      "  Objective range  [1e+00, 1e+02]\n",
+      "  Bounds range     [1e+00, 1e+00]\n",
+      "  RHS range        [1e+00, 2e+03]\n",
+      "Presolve time: 0.12s\n",
+      "Presolved: 1640 rows, 64000 columns, 128000 nonzeros\n",
+      "Variable types: 0 continuous, 64000 integer (64000 binary)\n",
+      "Found heuristic solution: objective -111736.0000\n",
+      "\n",
+      "Root relaxation: objective -9.710500e+04, 4637 iterations, 0.20 seconds (0.29 work units)\n",
+      "\n",
+      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
+      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
+      "\n",
+      "     0     0 -97105.000    0   51 -111736.00 -97105.000  13.1%     -    0s\n",
+      "H    0     0                    -97311.00000 -97105.000  0.21%     -    1s\n",
+      "H    0     0                    -97282.00000 -97105.000  0.18%     -    2s\n",
+      "     0     0 -97105.000    0   94 -97282.000 -97105.000  0.18%     -    2s\n",
+      "H    0     0                    -97267.00000 -97105.000  0.17%     -    6s\n",
+      "     0     0 -97105.000    0   94 -97267.000 -97105.000  0.17%     -    6s\n",
+      "     0     0 -97105.000    0   49 -97267.000 -97105.000  0.17%     -    6s\n",
+      "     0     0 -97105.000    0   53 -97267.000 -97105.000  0.17%     -    6s\n",
+      "     0     0 -97105.000    0   39 -97267.000 -97105.000  0.17%     -    6s\n",
+      "     0     0 -97105.000    0   31 -97267.000 -97105.000  0.17%     -    7s\n",
+      "     0     0 -97105.000    0   28 -97267.000 -97105.000  0.17%     -    7s\n",
+      "     0     0 -97105.000    0   46 -97267.000 -97105.000  0.17%     -    8s\n",
+      "     0     0 -97105.000    0   46 -97267.000 -97105.000  0.17%     -    8s\n",
+      "     0     2 -97105.000    0   37 -97267.000 -97105.000  0.17%     -   12s\n",
+      "    31    38 -97105.000    7   66 -97267.000 -97105.000  0.17%  40.3   17s\n",
+      "H   35    38                    -97259.00000 -97105.000  0.16%  36.6   17s\n",
+      "    37    44 -97105.000    8   64 -97259.000 -97105.000  0.16%  35.5   22s\n",
+      "H   42    44                    -97258.00000 -97105.000  0.16%  32.2   22s\n",
+      "   115   360 -97105.000   21   69 -97258.000 -97105.000  0.16%  15.3   26s\n",
+      "   359   817 -97105.000   53   70 -97258.000 -97105.000  0.16%   8.6   31s\n",
+      "   816  1138 -97105.000  126   74 -97258.000 -97105.000  0.16%   7.4   35s\n",
+      "  1179  1531 -97105.000  223   79 -97258.000 -97105.000  0.16%   8.1   43s\n",
+      "  1530  1740 -97105.000  272   80 -97258.000 -97105.000  0.16%   8.9   46s\n",
+      "  1739  2140 -97105.000  299   80 -97258.000 -97105.000  0.16%   9.3   52s\n",
+      "  2139  2457 -97105.000  367   79 -97258.000 -97105.000  0.16%  10.2   57s\n",
+      "  2456  2728 -97105.000  429   79 -97258.000 -97105.000  0.16%  11.2   63s\n",
+      "  2727  3023 -97105.000  463   78 -97258.000 -97105.000  0.16%  12.3   69s\n",
+      "  3022  3318 -97105.000  514   78 -97258.000 -97105.000  0.16%  13.4   76s\n",
+      "  3317  3587 -97105.000  564   80 -97258.000 -97105.000  0.16%  14.3   83s\n",
+      "  3586  3821 -97105.000  617   78 -97258.000 -97105.000  0.16%  15.4   90s\n",
+      "H 3710  3821                    -97246.00000 -97105.000  0.14%  16.0   90s\n",
+      "  3820  4020 -97105.000  653   79 -97246.000 -97105.000  0.14%  16.5   98s\n",
+      "  4019  4162 -97105.000  688   79 -97246.000 -97105.000  0.14%  17.9  103s\n",
+      "H 4135  4162                    -97245.00000 -97105.000  0.14%  18.5  103s\n",
+      "  4161  4341 -97105.000  706   80 -97245.000 -97105.000  0.14%  18.7  110s\n",
+      "  4340  4530 -97105.000  728   78 -97245.000 -97105.000  0.14%  19.7  118s\n",
+      "  4529  4953 -97105.031  752   80 -97245.000 -97105.000  0.14%  21.3  127s\n",
+      "  4952  5515 -97108.045  839   80 -97245.000 -97105.000  0.14%  21.9  137s\n",
+      "  5514  6317 -97116.325  936   76 -97245.000 -97105.000  0.14%  21.7  147s\n",
+      "  6319  6319 -97105.000  623   51 -97245.000 -97105.000  0.14%  21.4  151s\n"
      ]
     }
    ],
